changed so it works for welcoming committee :D
yay

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body onload="changeLink(nextLink()); changecount(count)">
     <a id="link" href="https://scratch.mit.edu">Next project!</a>
-    <p id="projectcount">xx projects left to review!</p>
+    <p id="projectcount">xx projects left review or add to the spreadsheet!</p>
+	
+	<small>Thanks to technoboy10 and TheGrits who made <a href="https://github.com/scratchdesignstudio/quick-link" target="_blank">the original tool for adding SDS projects</a>.</small>
   </body>
 </html>
