--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <a id="link" href="https://scratch.mit.edu">Next project!</a>
     <p id="projectcount">xx projects left to review or/and add to the studio</p>
 	
-	<small>Thanks to technoboy10 and TheGrits who made <a href="https://github.com/scratchdesignstudio/quick-link" target="_blank">the original tool for adding SDS projects</a>.</small>
+	<small>Thanks to technoboy10 and The_Grits who made <a href="https://github.com/scratchdesignstudio/quick-link" target="_blank">the original tool for adding SDS projects and LiFayTheGoblin for forking the repository to make forking easier for me.</a>.</small>
   </body>
 </html>
