--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body onload="changeLink(nextLink()); changecount(count)">
     <a id="link" href="https://scratch.mit.edu">Next project!</a>
-    <p id="projectcount">xx projects left to review!</p>
+    <p id="projectcount"><a href=></a>xx projects left to review!</p></a>
 	
 	<small>Thanks to technoboy10 and The_Grits who made <a href="https://github.com/scratchdesignstudio/quick-link" target="_blank">the original tool for adding SDS projects</a> and LiFayTheGoblin for forking the repository to make forking easier for me.</a>.</small>
   </body>
