--- a/1/index.html
+++ b/1/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-<meta http-equiv="Refresh" content="20; URL=https://www.youtube.com/channel/UCQIh7vS6pvNPb4QX2LrUxlg">
+<meta http-equiv="refresh" content="0; URL='https://www.youtube.com/channel/UCQIh7vS6pvNPb4QX2LrUxlg'" />
 </html>
