--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-<p>Ignore this page - it doesn't exist</p>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScF9Li1vzLHWynBamjtDf4dtXzbEI9e93l55oLc-NYUuq0awQ/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </html>
