--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScF9Li1vzLHWynBamjtDf4dtXzbEI9e93l55oLc-NYUuq0awQ/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<head>
+  <title>VoxBot</title>
+ 
+     <title>VoxBot</title>
+ 
+     <link rel="icon" href="https://cdn2.scratch.mit.edu/get_image/user/5898454_32x32.png?v=1476040564.15" type="image/png">" type="image/gif">
+  </head>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScF9Li1vzLHWynBamjtDf4dtXzbEI9e93l55oLc-NYUuq0awQ/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </html>
