--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>VoxBot</title>
  
-     <title>VoxBot</title>
+     <title>Redirector - The free, open source redirector tool.</title>
  
      <link rel="icon" href="https://avatars1.githubusercontent.com/u/13748717?v=3&s=40" type="image/png">
   </head>
