--- a/2/index.html
+++ b/2/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-<meta http-equiv="refresh" content="0; URL='https://www.youtube.com/watch?v=dQw4w9WgXcQ'" />
+<meta http-equiv="refresh" content="0; URL='https://scratch.mit.edu/discuss/youtube/dQw4w9WgXcQ/'" />
 </html>
